// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select When Select as an error Renders correctly the component 1`] = `
.c0 {
  position: relative;
}

.c1 {
  position: absolute;
  top: 1.3rem;
  right: 0;
  margin-right: 1rem;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #e0151d;
  border-radius: 0.75rem;
  background-color: #ffffff;
  padding: 1rem;
  outline: 0;
  width: 100%;
}

.c2:disabled {
  background-color: #b0b0b0;
}

<div
  className="c0"
>
  <Chevron
    className="c1"
    fill="#222222"
  />
  <select
    className="c2"
  >
    <option
      label="MM"
      value={null}
    />
    <option
      label="1"
      value="1"
    />
    <option
      label="2"
      value="2"
    />
  </select>
</div>
`;

exports[`Select When Select is disabled Renders correctly the component 1`] = `
.c0 {
  position: relative;
}

.c1 {
  position: absolute;
  top: 1.3rem;
  right: 0;
  margin-right: 1rem;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #222222;
  border-radius: 0.75rem;
  background-color: #ffffff;
  padding: 1rem;
  outline: 0;
  width: 100%;
}

.c2:disabled {
  background-color: #b0b0b0;
}

<div
  className="c0"
>
  <Chevron
    className="c1"
    disabled={true}
    fill="#222222"
  />
  <select
    className="c2"
    disabled={true}
  >
    <option
      label="MM"
      value={null}
    />
    <option
      label="1"
      value="1"
    />
    <option
      label="2"
      value="2"
    />
  </select>
</div>
`;

exports[`Select When Select is enabled Renders correctly the component 1`] = `
.c0 {
  position: relative;
}

.c1 {
  position: absolute;
  top: 1.3rem;
  right: 0;
  margin-right: 1rem;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #e0151d;
  border-radius: 0.75rem;
  background-color: #ffffff;
  padding: 1rem;
  outline: 0;
  width: 100%;
}

.c2:disabled {
  background-color: #b0b0b0;
}

<div
  className="c0"
>
  <Chevron
    className="c1"
    disabled={false}
    fill="#222222"
  />
  <select
    className="c2"
    disabled={false}
  >
    <option
      label="MM"
      value={null}
    />
    <option
      label="1"
      value="1"
    />
    <option
      label="2"
      value="2"
    />
  </select>
</div>
`;
